2005-02-22  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* main.c: Added call to init scenemanager. 
	* scenemanager.c: Added quasi-hack to prevent road/label names from showing up twice on one screen.
	* map.c: Request permission from scenemanager before drawing a label.

2005-02-22  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>
	
	* import_tiger.c: Removed some debug output.

2005-02-22  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* import_tiger.c: Added extracting of polygon labels.
	* map.c: Added polygon label drawing.

2005-02-22  Carl Worth  <cworth@cworth.org>

	* configure.in:
	* include/databasewindow.h:
	* include/datasetwindow.h:
	* include/db.h:
	* include/geometryset.h:
	* include/gotowindow.h:
	* include/gpsclient.h:
	* include/gui.h:
	* include/import.h:
	* include/importwindow.h:
	* include/layers.h:
	* include/locationset.h:
	* include/mainwindow.h:
	* include/map.h:
	* include/scenemanager.h:
	* include/searchwindow.h:
	* include/util.h:
	* include/welcomewindow.h:
	* src/Makefile.am:
	* src/databasewindow.c: (databasewindow_connect),
	(databasewindow_on_connectbutton_clicked):
	* src/datasetwindow.c: (datasetwindow_show),
	(datasetwindow_confirm_delete):
	* src/db.c: (db_insert), (db_is_connected), (db_count_table_rows),
	(db_disconnect), (db_roadname_get_id):
	* src/geometryset.c:
	* src/gotowindow.c: (gotowindow_show), (gotowindow_hide),
	(util_string_to_double), (gotowindow_go):
	* src/gpsclient.c: (gpsclient_callback_update),
	(gpsclient_connect), (gpsclient_debug_print):
	* src/import.c: (import_progress_pulse):
	* src/import_tiger.c: (import_tiger_read_lat),
	(import_tiger_read_lon), (import_tiger_read_int),
	(import_tiger_read_address), (import_tiger_read_string),
	(import_tiger_read_layer_type), (debug_print_string),
	(import_tiger_copy_line), (import_tiger_parse_MET),
	(import_tiger_parse_table_1), (import_tiger_parse_table_2),
	(import_tiger_parse_table_7), (import_tiger_parse_table_8),