@@ -1,34 +1,12 @@
-## Process this file with automake to produce Makefile.in
-## Created by Anjuta - will be overwritten
-## If you don't want it to overwrite it,
-## 	Please disable it in the Anjuta project configuration
+SUBDIRS = src data pixmaps po
 
-SUBDIRS = intl po macros include src pixmaps
+intltool_extra = intltool-extract.in intltool-merge.in intltool-update.in
 
-roadsterdocdir = ${prefix}/doc/roadster
-roadsterdoc_DATA = \
-	README\
-	COPYING\
-	AUTHORS\
-	ChangeLog\
-	INSTALL\
-	NEWS\
-	TODO\
-	ABOUT-NLS
+EXTRA_DIST = $(intltool_extra)
 
-EXTRA_DIST = $(roadsterdoc_DATA)
+DISTCLEANFILES = 		\
+	intltool-extract 	\
+	intltool-merge 		\
+	intltool-update
 
-gnomemenudir = $(prefix)/@NO_PREFIX_PACKAGE_MENU_DIR@/Applications
-gnomemenu_DATA = roadster.desktop
-
-roadster_glade_filedir = $(prefix)/@NO_PREFIX_PACKAGE_DATA_DIR@/@PACKAGE@/glade
-roadster_glade_file_DATA = roadster.glade
-
-# Copy all the spec files. Of cource, only one is actually used.
-dist-hook:
-	for specfile in *.spec; do \
-		if test -f $$specfile; then \
-			cp -p $$specfile $(distdir); \
-		fi \
-	done
-
+DISTCHECK_CONFIGURE_FLAGS = --disable-schemas-install
