@@ -1,12 +1,8 @@
-## Process this file with automake to produce Makefile.in
 
-## Created by Anjuta - will be overwritten
-## If you don't want it to overwrite it,
-## 	Please disable it in the Anjuta project configuration
-
-roadster_pixmapsdir = $(prefix)/@NO_PREFIX_PACKAGE_PIXMAPS_DIR@
+roadster_pixmapsdir = $(datadir)/pixmaps
 
 roadster_pixmaps_DATA = \
 	roadster-icon.png
 
 EXTRA_DIST = $(roadster_pixmaps_DATA)
+
