@@ -1,10 +1,4 @@
 # List of source files containing translatable strings.
-
-## Created by Anjuta - will be overwritten
-## If you don't want it to overwrite it,
-## 	Please disable it in the Anjuta project configuration
-
-# Source files
 src/main.c
 src/db.c
 src/gui.c
@@ -27,5 +21,3 @@ src/search_location.c
 src/search.c
 src/scenemanager.c
 src/databasewindow.c
-
-
